server/public/styles/main.css
body {
    background-image: url(/assets/img/background.jpg);
    background-repeat: no-repeat;
    background-position: center;
    background-attachment: fixed;
    background-size: cover;
}

.container {
    background-color: rgba(255,255,255,0.9);
    height: 100%;
    border-radius: 0px 0px 15px 15px;
}

div.dc-chart {
    text-align: center;
    float: none;
}

/* Header */

#header {
    margin-top: 0px;
    margin-bottom: 30px;
    height: 100px;
    text-align: center;
}

#logo {
    font-family: 'Hammersmith One', sans-serif;
    font-size: 5em;
}

/* Basket data div */

.guild-name {
    height: 100px;
    font-size: 40px;
    text-align: center;
}

.value-display {
    width: 30%;
    min-width: 150px;
    text-align: center;
}

#rank-div {
    padding-top: 40px;
}

.depth-display {
    text-align: center;
}

.timer-box {
    text-align: center;
}

/* Common values */

#common-values {
    display: flex;
    flex-direction: row;
    align-items: center;
    flex-wrap: wrap;
    justify-content: center;
    margin-top: 30px;
    margin-bottom: 30px;
}

#common-values div {
    text-align: center;
}

#common-values span {
    font-size: 25px;
}

/* Rank chart div */

#rank-chart-div {
    margin: auto;
}

/* Rank table div */

#rank-table-div {
    height: 100%;
}

#rank-table {
    height: 100%;
    width: 100%;
}

.rank {
    font-size: 2.5em;
    width: 10%;
}

.rank-name {
    font-size: 1.7em;
    width: 30%;
}

.rank-value {
    padding: 0;
    width: 60%;
}

.progressbar-text {
    font-size: 30px;
}

/* Sponsor div*/

#sponsor-div {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: center;
    align-items: center;
}

#sponsor-div * {
    text-align: center;
}

.sponsor {
    vertical-align: middle;
    text-align: center;
    width: 100%
    padding: 0px;
}

#support-text {
    text-align: center;
    font-size: 20;
}

#valmet-logo {
    width: 100%;
    max-width: 300px;
}

#kampusklubi-logo {
    width: 100%;
    max-width: 150px;
}

